--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,9 +5,10 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'fr'
+    uploadPdfDir: '%kernel.project_dir%/public/assets/upload/pdf'
     paramsMailApp:
-        name: 'Jérôme Sauvage'
-        email: 'jerome.sauvage@etu.unilim.fr'
+        name: ''
+        email: ''
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -15,6 +16,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $webRootDir: '%kernel.project_dir%/public'
+            $uploadPdfDir: '%uploadPdfDir%'
             $dsn: '%env(resolve:MAILER_DSN)%'
 
     # makes classes in src/ available to be used as services
