--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,8 +7,8 @@ parameters:
     locale: 'fr'
     uploadPdfDir: '%kernel.project_dir%/public/assets/upload/pdf'
     paramsMailApp:
-        name: ''
-        email: ''
+        name: 'Jerome Sauvage'
+        email: 'jerome.sauvage@etu.unilim.fr'
 services:
     # default configuration for services in *this* file
     _defaults:
